rpi5/nzbget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  labels:
    app: nzbget
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      name: nzbget
      labels:
          app: nzbget
    spec:
      containers:
        - name: nzbget
          image: lscr.io/linuxserver/nzbget:24.4.20241119@sha256:0f9261e750317b7c0102a3e5b23461c332d072df8d5b95b1b3f03fc523e3e79c
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6789
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
      restartPolicy: Always
      volumes:
        - name: cfg-secret
          secret:
            secretName: nzbget-config
        - name: config
          emptyDir:
            medium: Memory
        - name: data
          hostPath:
            path: /data
            type: Directory
      nodeSelector:
        kubernetes.io/hostname: odroid-h4
