rpi5/nzbget/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nzbget
  labels:
      app: nzbget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbget
  serviceName: nzbget
  template:
    metadata:
      name: nzbget
      labels:
          app: nzbget
    spec:
      containers:
        - name: nzbget
          image: lscr.io/linuxserver/nzbget:v24.1-ls144
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6789
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
      restartPolicy: Always
      volumes:
        - name: cfg-secret
          secret:
            secretName: nzbget-config
        - name: data
          hostPath:
            path: /data
            type: Directory
      nodeSelector:
        kubernetes.io/hostname: odroid-h4
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 32Mi
