rpi5/nzbget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
spec:
  selector:
    app: nzbget
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6789
  type: ClusterIP
