rpi5/nzbget/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nzbget
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nzbget.local`) || Host(`nzbget.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: nzbget
          port: 80
  tls:
    secretName: nzbget-cert-tls
    domains:
      - main: nzbget.local
        sans:
          - nzbget.internal
